--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "torann/json-ld",
+  "name": "anton-am/json-ld",
   "description": "Extremely simple JSON-LD markup generator.",
   "keywords": ["json-ld", "generator", "schema", "structured-data"],
   "license": "BSD-2-Clause",
@@ -7,10 +7,14 @@
     {
       "name": "Daniel Stainback",
       "email": "torann@gmail.com"
+    },
+    {
+      "name": "Anton Am",
+      "email": "antonamru@gmail.com"
     }
   ],
   "require": {
-    "php": "^7.2",
+    "php": "^7.2|^8.0",
     "ext-json": "*"
   },
   "require-dev": {
@@ -27,11 +31,6 @@
   "autoload-dev": {
     "psr-4": {
       "JsonLd\\Test\\": "tests"
-    }
-  },
-  "extra": {
-    "branch-alias": {
-      "dev-master": "0.1-dev"
     }
   },
   "archive" : {
